--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -191,3 +191,54 @@ html{
         height: 50px;
     }
 }
+
+@media screen and (min-width: 1025px) {
+
+    /*    1025p Desktop Version    */
+
+    /*  HEADER  */
+
+    .blockLogo {
+        height: auto;
+        margin: 0 5% 5% 0;
+    }
+
+    .blockLogo img{
+        height: 100px;
+
+    }
+
+    .headerIcon{
+        display: none;
+    }
+    
+    .menu {
+        display: none;
+    }
+
+    .login {
+        display: none;
+    }
+    
+    // Le menu est pour le moment laissé sur la droite, en attendant les élèments que l'on souhaite rajouter sur la page
+
+    /*---SECTION---*/
+    .title {
+        display: inline-block;
+        margin: 3% 3% 3% 3%;
+        font-size: 2.7rem;
+    }
+
+    .article {
+        display: inline-block;
+        width: 90%;
+        margin: 2% 3% 2% 3%;
+        font-size: 2.0rem;
+        line-height: 2.0rem;
+        text-align: justify;
+    }
+
+    .blockText {
+        margin: 2% 3% 2% 3%;
+    }
+}
