--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -98,6 +98,20 @@ html{
     height: 50px;
 }
 
+
+/*---STYLE INDEX REGISTRATION---*/
+
+.blockForm{
+    border-bottom: 2px solid #ff0000;
+    box-shadow: 0 0 15px rgb(100,100,100);
+    width: 80%;
+    margin: 10% 1% 1% 8%;
+}
+
+.registerForm{
+    font-size: 1rem;
+}
+
 @media screen and (min-width: 641px) {
 
     /* -------------STYLE HOME.PHP  MOBILE FIRST MODELE IPAD ----------*/
@@ -189,5 +203,22 @@ html{
         text-align: center;
         width: 100%;
         height: 50px;
+    }
+
+    /*---STYLE INDEX REGISTRATION---*/
+
+    .blockForm{
+        border-bottom: 6px solid #ff0000;
+        box-shadow: 0 0 30px rgb(100,100,100);
+        width: 80%;
+        margin: 10% 1% 1% 8%;
+    }
+
+    .registerForm{
+        font-size: 2rem;
+    }
+
+    .field{
+        font-size: 1.5rem;
     }
 }
