--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -27,7 +27,7 @@ html{
     display: none;
 }
 .blockLogo {
-    width: 40%;
+    width: 50%;
     margin: 5% 5% 5% 0;
     display: inline-block;
 }
@@ -93,7 +93,7 @@ html{
     border: 1px solid #000000;
     border-radius: 10px;
     background-color: #FFFFFF;
-    box-shadow: 0px 0px 15px rgb(100,100,100);
+    box-shadow: 0 0 15px rgb(100,100,100);
     color: #000000;
 }
 .article:hover {
@@ -128,6 +128,15 @@ a.article {
 .registerForm{
     font-size: 1rem;
 }
+/*---FOOTER---*/
+
+.footer {
+    font-size: 0.8rem;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin: 15% 1% 1% 1%;
+}
 
 @media screen and (min-width: 641px) {
 
@@ -145,7 +154,7 @@ a.article {
 
     .blockLogo {
         width: 40%;
-        margin: 5% 5% 5% 0;
+        margin: 3% 5% 5% 0;
         display: inline-block;
     }
 
@@ -164,7 +173,7 @@ a.article {
         display: block;
         width: 2.5rem;
         height: 0;
-        top: 60px;
+        top: 45px;
         left: 65px;
         box-shadow: 0 -8px 0 2px #000, 0 7px 0 2px #000, 0 22px 0 2px #000;
     }
@@ -219,7 +228,7 @@ a.article {
         width: 100%;
         height: 50px;
     }
-<<<<<<< HEAD
+
 
     /*---STYLE INDEX REGISTRATION---*/
 
@@ -237,8 +246,15 @@ a.article {
     .field{
         font-size: 1.5rem;
     }
-}
-=======
+
+    .footer {
+        font-size: 0.8rem;
+        text-align: center;
+        width: 100%;
+        height: 50px;
+        margin: 15% 1% 1% 0;
+    }
+
     .desktopMenu {
         display: none;
     }
@@ -355,4 +371,3 @@ a.article {
         margin: 2% 3% 2% 3%;
     }
 }
->>>>>>> origin/master
