--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -316,7 +316,7 @@ a.article {
         font-size: 1.6rem;
         line-height: 2.0rem;
         width: 90%;
-        margin: 2% 3% 2% 3%;
+        margin: 2% 3% 2% 5%;
     }
 
     .blockText {
@@ -327,6 +327,27 @@ a.article {
         font-size: 1.5rem;
         height: 30px;
         margin: 3% 1% 1% 0;
+    }
+    
+    /*  Register Form   */
+
+    .blockForm{
+        border-radius: 10px 10px 10px 10px;
+        text-align: center;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .field{
+        margin-top: 2%;
+        border: 2px solid black;
+        border-radius: 3px;
+        height: 27px;
+        width: 255px;
+    }
+
+    .field::-webkit-input-placeholder {
+        text-align: center;
     }
 }
 @media screen and (min-width: 1441px) {
