--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -127,8 +127,43 @@ a.article {
 
 .registerForm{
     font-size: 1rem;
+    margin-left: 2%;
+}
+.field {
+    margin-bottom: 2%;
+}
+.desktopMenu {
+    display: none;
 }
 
+/*---STYLE CREATE ARTICLE---*/
+
+.form {
+    display: inline-block;
+    width: 90%;
+    margin: 5% 5% 5% 5%;
+    font-size: 1.3rem;
+    line-height: 1.2rem;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 15px rgb(100,100,100);
+    color: #000000;
+}
+.marginForm {
+    margin-left: 2%;
+}
+.textArea {
+    width: 80%;
+    height: 4rem;
+}
+.createArticle {
+    font-size: 1rem;
+    text-align: center;
+}
+.dateSize {
+    font-size: 1rem;
+}
 @media screen and (min-width: 641px) {
 
     /* -------------STYLE HOME.PHP  MOBILE FIRST MODELE IPAD ----------*/
@@ -219,7 +254,7 @@ a.article {
         width: 100%;
         height: 50px;
     }
-<<<<<<< HEAD
+/*<<<<<<< HEAD
 
     /*---STYLE INDEX REGISTRATION---*/
 
@@ -232,15 +267,48 @@ a.article {
 
     .registerForm{
         font-size: 2rem;
+        text-align: center;
     }
 
     .field{
         font-size: 1.5rem;
+        margin-bottom: 1%;
     }
-}
-=======
     .desktopMenu {
         display: none;
+    }
+/*=======*/
+    /*---STYLE CREATE ARTICLE---*/
+    .form {
+        text-align: center;
+        display: inline-block;
+        width: 90%;
+        margin: 10% 5% 5% 5%;
+        font-size: 1.3rem;
+        line-height: 1.2rem;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 15px rgb(100,100,100);
+        color: #000000;
+    }
+    .marginForm {
+        text-align: center;
+    }
+    .textArea {
+        width: 80%;
+        height: 12rem;
+        margin-bottom: 2%;
+    }
+    .createArticle {
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+    .dateSize {
+        font-size: 1.3rem;
+        display: inline-block;
     }
 }
 @media screen and (min-width: 1025px) {
@@ -292,8 +360,76 @@ a.article {
     .blockText {
         margin: 2% 3% 2% 3%;
     }
+
+    /*---STYLE INDEX REGISTRATION---*/
+
+    .blockForm{
+        border-bottom: 6px solid #ff0000;
+        box-shadow: 0 0 30px rgb(100,100,100);
+        width: 80%;
+        margin: 10% 1% 1% 8%;
+    }
+
+    .registerForm{
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .field{
+        font-size: 1.5rem;
+        margin-bottom: 1%;
+    }
     .desktopMenu {
+        display: inline-block;
+        font-size: 2rem;
+        float: right;
+        margin-top: 3%;
+    }
+    .desktopMenu a {
+        text-decoration: none;
+        color: #000000;
+    }
+    .desktopMenu a:hover {
+        text-decoration: none;
+        color: gray;
+    }
+    .menu {
         display: none;
+    }
+    .blockLogo {
+        float: left;
+    }
+    /*---STYLE CREATE ARTICLE---*/
+    .form {
+        text-align: center;
+        display: inline-block;
+        width: 90%;
+        margin: 5% 5% 5% 5%;
+        font-size: 1.3rem;
+        line-height: 1.2rem;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 15px rgb(100,100,100);
+        color: #000000;
+    }
+    .marginForm {
+        text-align: center;
+    }
+    .textArea {
+        width: 80%;
+        height: 18rem;
+        margin-bottom: 2%;
+    }
+    .createArticle {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+    .dateSize {
+        font-size: 1.5rem;
+        display: inline-block;
     }
 }
 @media screen and (min-width: 1441px) {
@@ -354,5 +490,44 @@ a.article {
     .blockText {
         margin: 2% 3% 2% 3%;
     }
+    /*---STYLE CREATE ARTICLE---*/
+    .form {
+        text-align: center;
+        display: inline-block;
+        width: 90%;
+        height: 60rem;
+        margin: 2% 5% 5% 5%;
+        font-size: 1.3rem;
+        line-height: 1.2rem;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 15px rgb(100,100,100);
+        color: #000000;
+    }
+    .marginForm {
+        text-align: center;
+    }
+    .textArea {
+        width: 80%;
+        height: 60%;
+        margin-bottom: 2%;
+        font-size: 1.3rem;
+    }
+    .createArticle {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+    .dateSize {
+        font-size: 1.5rem;
+        display: inline-block;
+    }
+    .titleSize {
+        width: 25%;
+        height: 4%;
+        font-size: 2rem;
+    }
 }
->>>>>>> origin/master
+
