--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -165,7 +165,7 @@ a.article {
 }
 
 
-/*---STYLE CREATE ARTICLE---*/
+/*---STYLE CREATE ARTICLE + UPDATE---*/
 
 .form {
     display: inline-block;
@@ -283,11 +283,6 @@ a.article {
         width: 100%;
         height: 50px;
     }
-<<<<<<< HEAD
-/*<<<<<<< HEAD
-=======
-
->>>>>>> 9f0ba81700141c3883f0823d56e3887b117f1967
 
     /*---STYLE INDEX REGISTRATION---*/
 
@@ -307,12 +302,11 @@ a.article {
         font-size: 1.5rem;
         margin-bottom: 1%;
     }
-<<<<<<< HEAD
     .desktopMenu {
         display: none;
     }
 /*=======*/
-    /*---STYLE CREATE ARTICLE---*/
+    /*---STYLE CREATE ARTICLE + UPDATE---*/
     .form {
         text-align: center;
         display: inline-block;
@@ -344,7 +338,7 @@ a.article {
         font-size: 1.3rem;
         display: inline-block;
     }
-=======
+/*=======*/
 
     .footer {
         font-size: 0.8rem;
@@ -377,7 +371,6 @@ a.article {
         font-size: 1.3rem;
     }
 
->>>>>>> 9f0ba81700141c3883f0823d56e3887b117f1967
 }
 @media screen and (min-width: 1025px) {
 
@@ -443,7 +436,6 @@ a.article {
         margin: 2% 3% 2% 3%;
     }
 
-<<<<<<< HEAD
     /*---STYLE INDEX REGISTRATION---*/
 
     .blockForm{
@@ -478,17 +470,17 @@ a.article {
     }
     .menu {
         display: none;
-=======
+    }
+    /*=======*/
     .footer {
         font-size: 1.5rem;
         height: 30px;
         margin: 3% 1% 1% 0;
->>>>>>> 9f0ba81700141c3883f0823d56e3887b117f1967
     }
     .blockLogo {
         float: left;
     }
-    /*---STYLE CREATE ARTICLE---*/
+    /*---STYLE CREATE ARTICLE + UPDATE---*/
     .form {
         text-align: center;
         display: inline-block;
@@ -579,7 +571,7 @@ a.article {
     .blockText {
         margin: 2% 3% 2% 3%;
     }
-    /*---STYLE CREATE ARTICLE---*/
+    /*---STYLE CREATE ARTICLE + UPDATE---*/
     .form {
         text-align: center;
         display: inline-block;
@@ -619,7 +611,3 @@ a.article {
         font-size: 2rem;
     }
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> 9f0ba81700141c3883f0823d56e3887b117f1967
