update article + create articlle + correction

--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -4,9 +4,11 @@
     font-family: OpenSansRegular;
     src: url(../asset/font/OpenSansRegular.ttf);
 }
-html{
+
+html {
     font-family: OpenSansRegular;
 }
+
 /*---HEADER---*/
 
 .mainConteiner {
@@ -20,25 +22,42 @@ html{
     border-top: 5px solid red;
     border-bottom: 10px solid lightgray;
 }
+
 .section {
     background-color: #EFEFEF;
 }
+
 .desktopMenu {
     display: none;
 }
+
 .blockLogo {
     width: 50%;
     margin: 5% 5% 5% 0;
     display: inline-block;
 }
 
-.headerIcon {
+.headerIcon, .hideIcon {
     position: relative;
     display: block;
     float: right;
     width: 15%;
     height: 50px;
     cursor: pointer;
+}
+
+#croix1, #croix2 {
+    width: 55%;
+    position: absolute;
+    display: none;
+    color: black;
+    background-color: black;
+    height: 1%;
+}
+
+.hideIcon {
+    margin-top: 7%;
+    width: 11%;
 }
 
 .headerIcon:after {
@@ -88,17 +107,19 @@ html{
     display: inline-block;
     width: 90%;
     margin: 5% 5% 5% 5%;
-    font-size: 1.3rem;
+    font-size: 1rem;
     line-height: 1.2rem;
     border: 1px solid #000000;
     border-radius: 10px;
     background-color: #FFFFFF;
-    box-shadow: 0 0 15px rgb(100,100,100);
+    box-shadow: 0 0 15px rgb(100, 100, 100);
     color: #000000;
 }
+
 .article:hover {
     background-color: #EFEFEF;
 }
+
 a.article {
     text-decoration: none;
 }
@@ -113,50 +134,77 @@ a.article {
     text-align: center;
     width: 100%;
     height: 50px;
+    padding-top: 10%;
+    border-top: 5px solid red;
+    border-bottom: 10px solid lightgray;
 }
-
 
 /*---STYLE INDEX REGISTRATION---*/
 
-.blockForm{
+.blockForm {
     border-bottom: 2px solid #ff0000;
-    box-shadow: 0 0 15px rgb(100,100,100);
+    box-shadow: 0 0 15px rgb(100, 100, 100);
     width: 80%;
-    margin: 10% 1% 1% 8%;
+    margin: 10% 10% 10% 10%;
 }
 
-.registerForm{
+.registerForm {
     font-size: 1rem;
-}
-/*---FOOTER---*/
-
-.footer {
-    font-size: 0.8rem;
-    text-align: center;
-    width: 100%;
-    height: 50px;
-    margin: 15% 1% 1% 1%;
 }
 
 /*---STYLE LOGIN PAGE---*/
 
-.blockLogin{
+.blockLogin {
     border-bottom: 2px solid #ff0000;
-    box-shadow: 0 0 15px rgb(100,100,100);
+    box-shadow: 0 0 15px rgb(100, 100, 100);
     width: 80%;
-    margin: 10% 1% 1% 8%;
+    margin: 10% 10% 17% 10%;
 }
 
-.loginForm{
+.loginForm {
     font-size: 1rem;
     margin: 5% 5% 5% 5%;
-    padding: 1%;
 }
 
-.fieldLogin{
+.fieldLogin {
     margin: 5% 5% 5% 5%;
 }
 
+/*---STYLE UPDATE PAGE---*/
+
+.blockUpdate{
+    border-bottom: 2px solid #ff0000;
+    box-shadow: 0 0 15px rgb(100, 100, 100);
+    width: 80%;
+    margin: 10% 10% 37% 10%;
+}
+
+.updateForm{
+    font-size: 1rem;
+    margin: 5% 5% 5% 5%;
+}
+
+.fieldUpdate{
+    margin: 10% 5% 5% 5%;
+}
+
+/*---STYLE CREATE PAGE---*/
+
+.blockCreate{
+    border-bottom: 2px solid #ff0000;
+    box-shadow: 0 0 15px rgb(100, 100, 100);
+    width: 80%;
+    margin: 10% 10% 37% 10%;
+}
+
+.createForm{
+    font-size: 1rem;
+    margin: 5% 5% 5% 5%;
+}
+
+.fieldCreate{
+    margin: 10% 5% 5% 5%;
+}
 
 @media screen and (min-width: 641px) {
 
@@ -170,6 +218,8 @@ a.article {
         position: static;
         width: 100%;
         height: 100px;
+        border-top: 5px solid red;
+        border-bottom: 10px solid lightgray;
     }
 
     .blockLogo {
@@ -178,13 +228,27 @@ a.article {
         display: inline-block;
     }
 
-    .headerIcon {
+    .headerIcon, .hideIcon {
         position: relative;
         display: block;
         float: right;
         width: 20%;
         height: 50px;
         cursor: pointer;
+    }
+
+    .hideIcon {
+        margin-top: 5%;
+        width: 12%;
+    }
+
+    #croix1, #croix2 {
+        width: 55%;
+        position: absolute;
+        display: none;
+        color: black;
+        background-color: black;
+        height: 2px;
     }
 
     .headerIcon:after {
@@ -235,6 +299,7 @@ a.article {
         margin: 5% 5% 5% 5%;
         font-size: 1.4rem;
         line-height: 1.8rem;
+        text-align: justify;
     }
 
     .blockText {
@@ -247,32 +312,25 @@ a.article {
         text-align: center;
         width: 100%;
         height: 50px;
+        padding-top: 5%;
+        border-top: 5px solid red;
+        border-bottom: 10px solid lightgray;
     }
-
 
     /*---STYLE INDEX REGISTRATION---*/
-
-    .blockForm{
+    .blockForm {
         border-bottom: 6px solid #ff0000;
-        box-shadow: 0 0 30px rgb(100,100,100);
+        box-shadow: 0 0 30px rgb(100, 100, 100);
         width: 80%;
-        margin: 10% 1% 1% 8%;
+        margin: 10% 10% 10% 10%;
     }
 
-    .registerForm{
+    .registerForm {
         font-size: 2rem;
     }
 
-    .field{
+    .field {
         font-size: 1.5rem;
-    }
-
-    .footer {
-        font-size: 0.8rem;
-        text-align: center;
-        width: 100%;
-        height: 50px;
-        margin: 15% 1% 1% 0;
     }
 
     .desktopMenu {
@@ -280,37 +338,159 @@ a.article {
     }
 
     /*---STYLE LOGIN PAGE---*/
-
-    .blockLogin{
+    .blockLogin {
         border-bottom: 2px solid #ff0000;
-        box-shadow: 0 0 15px rgb(100,100,100);
+        box-shadow: 0 0 15px rgb(100, 100, 100);
         width: 80%;
-        margin: 10% 1% 1% 8%;
+        margin: 26% 10% 35% 10%;
     }
 
-    .loginForm{
+    .loginForm {
         font-size: 1.3rem;
         margin: 5% 5% 5% 5%;
     }
 
-    .fieldLogin{
+    .fieldLogin {
         margin: 5% 5% 5% 0;
         font-size: 1.3rem;
     }
 
+    /*---STYLE UPDATE PAGE---*/
+
+    .blockUpdate{
+        border-bottom: 2px solid #ff0000;
+        box-shadow: 0 0 15px rgb(100, 100, 100);
+        width: 80%;
+        margin: 10% 10% 37% 10%;
+    }
+
+    .updateForm{
+        font-size: 1.4rem;
+        margin: 5% 5% 5% 5%;
+    }
+
+    .fieldUpdate{
+        font-size: 1.4rem;
+        margin: 10% 5% 5% 5%;
+    }
+
+    /*---STYLE CREATE PAGE---*/
+
+    .blockCreate{
+        border-bottom: 2px solid #ff0000;
+        box-shadow: 0 0 15px rgb(100, 100, 100);
+        width: 80%;
+        margin: 10% 10% 37% 10%;
+    }
+
+    .createForm{
+        font-size: 1.4rem;
+        margin: 5% 5% 5% 5%;
+    }
+
+    .fieldCreate{
+        font-size: 1.4rem;
+        margin: 10% 5% 5% 5%;
+    }
+
 }
+
 @media screen and (min-width: 1025px) {
 
     /*    1025p Desktop Version    */
-    /*    HEADER    */
-    .blockLogo {
-        height: auto;
-        margin: 0 5% 5% 0;
+    /*  HEADER  */
+
+    .header {
+        position: static;
+        width: 100%;
+        height: 100px;
+        border-top: 5px solid red;
+        border-bottom: 10px solid lightgray;
     }
 
-    .blockLogo img {
-        height: 100px;
+    .blockLogo {
+        margin: 2% 0% 0% 0;
+        width: 30%;
+    }
 
+    .headerIcon {
+        display: none;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .desktopMenu {
+        display: inline-block;
+        font-size: 1.6rem;
+        float: right;
+        word-spacing: 2rem;
+        margin: 3% 0% 0% 0%;
+    }
+
+    .desktopMenu a {
+        text-decoration: none;
+        color: #000000;
+    }
+
+    .desktopMenu a:hover {
+        text-decoration: none;
+        color: gray;
+    }
+
+    .login {
+        display: none;
+    }
+
+    /*---FOOTER---*/
+
+    .footer {
+        font-size: 1.2rem;
+        text-align: center;
+        width: 100%;
+        height: 50px;
+        padding-top: 4%;
+        border-top: 5px solid red;
+        border-bottom: 10px solid lightgray;
+    }
+
+    /*Le menu est pour le moment laissé sur la droite, en attendant les élèments que l'on souhaite rajouter sur la page*/
+    /*---SECTION---*/
+    .title {
+        display: inline-block;
+        margin: 5% 3% 3% 5%;
+        font-size: 2.2rem;
+    }
+
+    .article {
+        display: inline-block;
+        width: 90%;
+        margin: 10% 10% 10% 10%;
+        font-size: 1.4rem;
+        line-height: 2.0rem;
+        text-align: justify;
+    }
+
+    .blockText {
+        margin: 2% 3% 2% 3%;
+    }
+
+}
+
+@media screen and (min-width: 1441px) {
+
+    .header {
+        position: static;
+        width: 100%;
+        height: 100px;
+        border-top: 5px solid red;
+        border-bottom: 10px solid lightgray;
+    }
+
+    .blockLogo {
+        margin: 1% 5% 5% 0;
+        width: 25%;
     }
 
     .headerIcon {
@@ -327,82 +507,18 @@ a.article {
 
     .desktopMenu {
         display: inline-block;
-        font-size: 1.8rem;
-        float: right;
-        margin-top: 3%;
-        margin-right: 2%;
-        word-spacing: 2rem;
-    }
-
-    .desktopMenu a {
-        text-decoration: none;
-        color: black;
-    }
-    .desktopMenu a:hover {
-        text-decoration: none;
-        color: grey;
-    }
-
-    /*    SECTION    */
-    .title {
-        display: inline-block;
-        margin: 3% 3% 3% 3%;
-        font-size: 2.3rem;
-    }
-
-    .article {
-        display: inline-block;
-        text-align: justify;
-        font-size: 1.6rem;
-        line-height: 2.0rem;
-        width: 90%;
-        margin: 2% 3% 2% 5%;
-    }
-
-    .blockText {
-        margin: 2% 3% 2% 3%;
-    }
-
-    .footer {
-        font-size: 1.5rem;
-        height: 30px;
-        margin: 3% 1% 1% 0;
-    }
-}
-@media screen and (min-width: 1441px) {
-    .blockLogo {
-        height: auto;
-        margin: 0 5% 5% 0;
-    }
-
-    .blockLogo img{
-        height: 100px;
-
-    }
-
-    .headerIcon{
-        display: none;
-    }
-
-    .menu {
-        display: none;
-    }
-
-    .login {
-        display: none;
-    }
-    .desktopMenu {
-        display: inline-block;
         font-size: 2rem;
         float: right;
         margin-top: 2%;
         margin-right: 5%;
         word-spacing: 2rem;
     }
+
     .desktopMenu a {
         text-decoration: none;
         color: #000000;
     }
+
     .desktopMenu a:hover {
         text-decoration: none;
         color: gray;
@@ -411,15 +527,15 @@ a.article {
     /*---SECTION---*/
     .title {
         display: inline-block;
-        margin: 3% 3% 3% 3%;
-        font-size: 2.7rem;
+        margin: 3% 3% 0% 3%;
+        font-size: 2.2rem;
     }
 
     .article {
         display: inline-block;
         width: 90%;
-        margin: 2% 3% 2% 3%;
-        font-size: 2.0rem;
+        margin: 10% 10% 10% 10%;
+        font-size: 1.4rem;
         line-height: 2.0rem;
         text-align: justify;
     }
