--- a/php/mvc/public/css/style.css
+++ b/php/mvc/public/css/style.css
@@ -9,6 +9,23 @@ html {
     font-family: OpenSansRegular;
 }
 
+/* Ajout effet animation d'une page a l'autre */
+
+@keyframes Show {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+body {
+    animation-name: Show;
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+}
+
 /*---HEADER---*/
 
 .mainConteiner {
@@ -46,15 +63,6 @@ html {
     cursor: pointer;
 }
 
-#croix1, #croix2 {
-    width: 55%;
-    position: absolute;
-    display: none;
-    color: black;
-    background-color: black;
-    height: 1%;
-}
-
 .hideIcon {
     margin-top: 7%;
     width: 11%;
@@ -69,6 +77,15 @@ html {
     top: 16px;
     left: 15px;
     box-shadow: 0 10px 0 1px #000, 0 16px 0 1px #000, 0 22px 0 1px #000;
+}
+
+#croix1, #croix2 {
+    width: 55%;
+    position: absolute;
+    display: none;
+    color: black;
+    background-color: black;
+    height: 1%;
 }
 
 .menu {
@@ -134,9 +151,12 @@ a.article {
     text-align: center;
     width: 100%;
     height: 50px;
-    padding-top: 10%;
     border-top: 5px solid red;
     border-bottom: 10px solid lightgray;
+}
+
+.blockFooter{
+    margin: 6%;
 }
 
 /*---STYLE INDEX REGISTRATION---*/
@@ -150,6 +170,12 @@ a.article {
 
 .registerForm {
     font-size: 1rem;
+    margin: 5% 5% 5% 5%;
+    text-align: center;
+}
+
+.field {
+    margin-bottom: 2%;
 }
 
 /*---STYLE LOGIN PAGE---*/
@@ -158,16 +184,54 @@ a.article {
     border-bottom: 2px solid #ff0000;
     box-shadow: 0 0 15px rgb(100, 100, 100);
     width: 80%;
-    margin: 10% 10% 17% 10%;
+    margin: 10% 10% 29% 10%;
 }
 
 .loginForm {
+    text-align: center;
     font-size: 1rem;
+    border-radius: 10px 10px 10px 10px;
     margin: 5% 5% 5% 5%;
 }
 
 .fieldLogin {
     margin: 5% 5% 5% 5%;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+
+/*---STYLE CREATE ARTICLE + UPDATE---*/
+
+.form {
+    display: inline-block;
+    width: 90%;
+    margin: 5% 5% 5% 5%;
+    font-size: 1.3rem;
+    line-height: 1.2rem;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 15px rgb(100, 100, 100);
+    color: #000000;
+}
+
+.marginForm {
+    margin-left: 2%;
+}
+
+.textArea {
+    width: 80%;
+    height: 4rem;
+}
+
+.createArticle {
+    font-size: 1rem;
+    text-align: center;
+}
+
+.dateSize {
+    font-size: 1rem;
 }
 
 /*---STYLE UPDATE PAGE---*/
@@ -218,8 +282,6 @@ a.article {
         position: static;
         width: 100%;
         height: 100px;
-        border-top: 5px solid red;
-        border-bottom: 10px solid lightgray;
     }
 
     .blockLogo {
@@ -236,7 +298,7 @@ a.article {
         height: 50px;
         cursor: pointer;
     }
-
+    
     .hideIcon {
         margin-top: 5%;
         width: 12%;
@@ -260,6 +322,10 @@ a.article {
         top: 45px;
         left: 65px;
         box-shadow: 0 -8px 0 2px #000, 0 7px 0 2px #000, 0 22px 0 2px #000;
+    }
+    
+    .desktopMenu {
+        display: none;
     }
 
     .menu {
@@ -311,10 +377,11 @@ a.article {
         font-size: 1.2rem;
         text-align: center;
         width: 100%;
-        height: 50px;
-        padding-top: 5%;
-        border-top: 5px solid red;
-        border-bottom: 10px solid lightgray;
+        height: 100px;
+    }
+
+    .blockFooter{
+        margin: 6%;
     }
 
     /*---STYLE INDEX REGISTRATION---*/
@@ -327,35 +394,52 @@ a.article {
 
     .registerForm {
         font-size: 2rem;
+        text-align: center;
     }
 
     .field {
         font-size: 1.5rem;
+        margin-bottom: 1%;
     }
 
-    .desktopMenu {
-        display: none;
+    /*---STYLE CREATE ARTICLE + UPDATE---*/
+    .form {
+        text-align: center;
+        display: inline-block;
+        width: 90%;
+        margin: 10% 5% 5% 5%;
+        font-size: 1.3rem;
+        line-height: 1.2rem;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 15px rgb(100, 100, 100);
+        color: #000000;
     }
 
-    /*---STYLE LOGIN PAGE---*/
-    .blockLogin {
-        border-bottom: 2px solid #ff0000;
-        box-shadow: 0 0 15px rgb(100, 100, 100);
+    .marginForm {
+        text-align: center;
+    }
+
+    .textArea {
         width: 80%;
-        margin: 26% 10% 35% 10%;
+        height: 12rem;
+        margin-bottom: 2%;
     }
 
-    .loginForm {
+    .createArticle {
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+
+    .dateSize {
         font-size: 1.3rem;
-        margin: 5% 5% 5% 5%;
+        display: inline-block;
     }
-
-    .fieldLogin {
-        margin: 5% 5% 5% 0;
-        font-size: 1.3rem;
-    }
-
-    /*---STYLE UPDATE PAGE---*/
+    
+        /*---STYLE UPDATE PAGE---*/
 
     .blockUpdate{
         border-bottom: 2px solid #ff0000;
@@ -393,13 +477,32 @@ a.article {
         margin: 10% 5% 5% 5%;
     }
 
+
+    /*---STYLE LOGIN PAGE---*/
+    .blockLogin {
+        border-bottom: 2px solid #ff0000;
+        box-shadow: 0 0 15px rgb(100, 100, 100);
+        width: 80%;
+        margin: 32% 10% 29% 10%;
+    }
+
+    .loginForm {
+        font-size: 1.4rem;
+        margin: 5% 5% 5% 5%;
+    }
+
+    .fieldLogin {
+        margin: 5% 5% 5% 5%;
+        font-size: 1.3rem;
+    }
+
 }
 
 @media screen and (min-width: 1025px) {
 
     /*    1025p Desktop Version    */
-    /*  HEADER  */
-
+    /*    HEADER    */
+    
     .header {
         position: static;
         width: 100%;
@@ -407,10 +510,10 @@ a.article {
         border-top: 5px solid red;
         border-bottom: 10px solid lightgray;
     }
-
+    
     .blockLogo {
-        margin: 2% 0% 0% 0;
-        width: 30%;
+        width: 25%;
+        margin: 2% 5% 5% 0;
     }
 
     .headerIcon {
@@ -421,12 +524,86 @@ a.article {
         display: none;
     }
 
+    .login {
+        display: none;
+    }
+
     .desktopMenu {
         display: inline-block;
         font-size: 1.6rem;
         float: right;
+        margin: 3% 0 0 0;
         word-spacing: 2rem;
-        margin: 3% 0% 0% 0%;
+    }
+
+    .desktopMenu a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .desktopMenu a:hover {
+        text-decoration: none;
+        color: grey;
+    }
+
+
+
+    /*    SECTION    */
+    .title {
+        display: inline-block;
+        margin: 3% 3% 3% 3%;
+        font-size: 2.3rem;
+    }
+
+    .article {
+        display: inline-block;
+        text-align: justify;
+        font-size: 1.6rem;
+        line-height: 2.0rem;
+        width: 90%;
+        margin: 2% 3% 2% 5%;
+    }
+
+    .blockText {
+        margin: 2% 3% 2% 3%;
+    }
+
+    /*---FOOTER---*/
+
+    .footer {
+        font-size: 1.2rem;
+        text-align: center;
+        width: 100%;
+        height: 100px;
+    }
+
+    .blockFooter{
+        margin: 4%;
+    }
+
+    /*---STYLE INDEX REGISTRATION---*/
+    .blockForm {
+        border-bottom: 6px solid #ff0000;
+        box-shadow: 0 0 30px rgb(100, 100, 100);
+        width: 80%;
+        margin: 10% 10% 10% 10%;
+    }
+
+    .registerForm {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .field {
+        font-size: 1.5rem;
+        margin-bottom: 1%;
+    }
+
+    .desktopMenu {
+        display: inline-block;
+        font-size: 2rem;
+        float: right;
+        margin-top: 3%;
     }
 
     .desktopMenu a {
@@ -439,43 +616,65 @@ a.article {
         color: gray;
     }
 
-    .login {
+    .menu {
         display: none;
     }
 
-    /*---FOOTER---*/
 
-    .footer {
-        font-size: 1.2rem;
+    /*---STYLE CREATE ARTICLE + UPDATE---*/
+    .form {
         text-align: center;
-        width: 100%;
-        height: 50px;
-        padding-top: 4%;
-        border-top: 5px solid red;
-        border-bottom: 10px solid lightgray;
-    }
-
-    /*Le menu est pour le moment laissé sur la droite, en attendant les élèments que l'on souhaite rajouter sur la page*/
-    /*---SECTION---*/
-    .title {
-        display: inline-block;
-        margin: 5% 3% 3% 5%;
-        font-size: 2.2rem;
-    }
-
-    .article {
         display: inline-block;
         width: 90%;
-        margin: 10% 10% 10% 10%;
+        margin: 5% 5% 5% 5%;
+        font-size: 1.3rem;
+        line-height: 1.2rem;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 15px rgb(100, 100, 100);
+        color: #000000;
+    }
+
+    .marginForm {
+        text-align: center;
+    }
+
+    .textArea {
+        width: 80%;
+        height: 18rem;
+        margin-bottom: 2%;
+    }
+
+    .createArticle {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+
+    .dateSize {
+        font-size: 1.5rem;
+        display: inline-block;
+    }
+
+    /*---STYLE LOGIN PAGE---*/
+    .blockLogin {
+        border-bottom: 2px solid #ff0000;
+        box-shadow: 0 0 15px rgb(100, 100, 100);
+        width: 80%;
+        margin: 20% 10% 20% 10%;
+    }
+
+    .loginForm {
         font-size: 1.4rem;
-        line-height: 2.0rem;
-        text-align: justify;
+        margin: 5% 5% 5% 5%;
     }
 
-    .blockText {
-        margin: 2% 3% 2% 3%;
+    .fieldLogin {
+        margin: 5% 5% 5% 5%;
+        font-size: 1.3rem;
     }
-
 }
 
 @media screen and (min-width: 1441px) {
@@ -489,9 +688,10 @@ a.article {
     }
 
     .blockLogo {
-        margin: 1% 5% 5% 0;
         width: 25%;
+        margin: 1% 5% 5% 2%;
     }
+
 
     .headerIcon {
         display: none;
@@ -527,15 +727,15 @@ a.article {
     /*---SECTION---*/
     .title {
         display: inline-block;
-        margin: 3% 3% 0% 3%;
-        font-size: 2.2rem;
+        margin: 3% 3% 3% 3%;
+        font-size: 2.7rem;
     }
 
     .article {
         display: inline-block;
         width: 90%;
-        margin: 10% 10% 10% 10%;
-        font-size: 1.4rem;
+        margin: 2% 3% 2% 3%;
+        font-size: 2.0rem;
         line-height: 2.0rem;
         text-align: justify;
     }
@@ -543,4 +743,104 @@ a.article {
     .blockText {
         margin: 2% 3% 2% 3%;
     }
+
+    /*---FOOTER---*/
+
+    .footer {
+        font-size: 1.2rem;
+        text-align: center;
+        width: 100%;
+        height: 100px;
+    }
+
+    .blockFooter{
+        margin: 3%;
+    }
+
+    /*---STYLE CREATE ARTICLE + UPDATE---*/
+    .form {
+        text-align: center;
+        display: inline-block;
+        width: 90%;
+        height: 60rem;
+        margin: 2% 5% 5% 5%;
+        font-size: 1.3rem;
+        line-height: 1.2rem;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 15px rgb(100, 100, 100);
+        color: #000000;
+    }
+
+    .marginForm {
+        text-align: center;
+    }
+
+    .textArea {
+        width: 80%;
+        height: 60%;
+        margin-bottom: 2%;
+        font-size: 1.3rem;
+    }
+
+    .createArticle {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+
+    .dateSize {
+        font-size: 1.5rem;
+        display: inline-block;
+    }
+
+    .titleSize {
+        width: 25%;
+        height: 4%;
+        font-size: 2rem;
+    }
+
+    /* Login Form */
+    .loginForm {
+        font-size: 2rem;
+    }
+
+    /*---STYLE INDEX REGISTRATION---*/
+    .blockForm {
+        border-bottom: 6px solid #ff0000;
+        box-shadow: 0 0 30px rgb(100, 100, 100);
+        width: 80%;
+        margin: 10% 10% 10% 10%;
+    }
+
+    .registerForm {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .field {
+        font-size: 1.5rem;
+        margin-bottom: 1%;
+    }
+
+    /*---STYLE LOGIN PAGE---*/
+    .blockLogin {
+        border-bottom: 2px solid #ff0000;
+        box-shadow: 0 0 15px rgb(100, 100, 100);
+        width: 80%;
+        margin: 10% 10% 10% 10%;
+    }
+
+    .loginForm {
+        font-size: 1.6rem;
+        margin: 5% 5% 5% 5%;
+    }
+
+    .fieldLogin {
+        margin: 5% 5% 5% 5%;
+        font-size: 1.6rem;
+    }
+
 }
